# Jarvis

./: .env  alembic.ini  migrate_database.py  pyproject.toml  smart_scheduler.db  startup.py
alembic/: env.py  script.py.mako
alembic/versions/: c1191529db54_add_notification_model.py  c1712e3cdd75_add_deadline_model_and_due_date_to_task.py
smart_scheduler/: main.py  main.py.backup  main.py.bak
smart_scheduler/api/routes/: __init__.py  deadline.py  notification.py  schedule.py  task.py
smart_scheduler/cli/: main.py
smart_scheduler/core/: config.py  database.py
smart_scheduler/models/: __init__.py  deadline.py  notification.py  project.py  task.py  user.py
smart_scheduler/services/: deadline_service.py  notification_service.py  project_service.py  task_service.py
smart_scheduler/static/css/: style.css
smart_scheduler/static/js/: app-backup.js  schedule.js  task_modal.js
smart_scheduler/templates/: base.html  calendar.html  dashboard.html  schedule.html  tasks.html
smart_scheduler/templates/partials/: task_modal.html
